// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supplies the routes 1`] = `
Array [
  Object {
    "getComponents": [Function],
    "path": "groups/finder",
  },
  Object {
    "getComponents": [Function],
    "path": "groups/:id",
  },
]
`;

exports[`test has a template for some reason 1`] = `
<h1>
  Lets find some groups!
</h1>
`;

exports[`test supplies the routes 1`] = `
Array [
  Object {
    "component": [Function],
    "path": "groups",
  },
  Object {
    "component": [Function],
    "path": "groups/finder",
  },
  Object {
    "component": [Function],
    "path": "groups/:id",
  },
]
`;
